style(homepage): fix link and button behavior on :hover, add text shadows, fix forgot-button collapse error, add media-queries for increased responsiveness

--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -7,6 +7,9 @@ body{
     color: aliceblue;
 }
 
+a:hover{
+    color: inherit;
+}
 
 
 .navbar{
@@ -25,18 +28,38 @@ form{
     position: relative;
     top: 40vh;
     
-  }
+}
+
+h4{
+    margin-bottom: 2rem;
+}
+
+
+h6,
+.back-button,
+#forgot-button{
+    text-shadow: none;
+    transition: text-shadow 0.6s;
+}
+
+
+h6:hover,
+.back-button:hover,
+#forgot-button:hover{
+    cursor: pointer;
+    text-shadow: 
+    0 0 20px rgb(198, 217, 217),
+    0 0 80px rgb(198, 217, 217),
+    0 0 150px rgb(203, 205, 205),
+    0 0 200px rgb(236, 241, 241);
+    transition: text-shadow 0.4s;
+
+
+}
 
 h6 a{
     text-decoration: none;
     color: white;
-
-}
-
-
-
-h6:hover{
-    cursor: pointer;
 }
 
 #brand-row{
@@ -103,9 +126,16 @@ h6:hover{
     transform: translateY(4.5vw);
 }
 
+#back-button-3{
+    transform: translateY(-75px);
+}
+
+#info-div > div{
+    text-align: left;
+}
 
 
-@media all and (orientation:portrait) {
+@media all and (max-width: 740px) {
 
     body{
         background-size: 400%;
@@ -144,7 +174,6 @@ h6:hover{
 
     #info-div > div{
         display: inline;
-        text-align: center;
         text-align: justify;
     }
 
@@ -158,7 +187,7 @@ h6:hover{
     }
 
     #back-button-3{
-        transform: translateY(-75px);
+        transform: translateY(-37vw);
     }
 
 
@@ -250,3 +279,47 @@ border-radius: 2px;
   .form-select:valid {
   --bs-form-select-bg-img: null; 
   }
+
+  @media all and (min-width: 741px) and (max-width: 768px){
+
+    .cover-container{
+        transform: translateY(-100px);
+    }
+
+    .form-control{
+        width: 60%;
+        margin: auto;
+    }
+
+    #back-button-0{
+        transform: translateY(120px);
+    }
+
+    #back-button-1{
+        transform: translateY(-95px);
+    }
+
+    #back-button-2,
+    #back-button-3{
+        transform: translateY(-200px);
+    }
+
+  }
+
+  @media all and (max-height: 670px) {
+
+    #back-button-1{
+        transform: translateY(-20px);
+    }
+
+    #back-button-2{
+        transform: translateY(-130px);
+    }
+
+    #back-button-3{
+        transform: translateY(-250px);
+    }
+
+  }
+
+ 
